--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.8",
+        "@tanstack/react-router": "^1.120.16",
+        "@tanstack/react-router-devtools": "^1.120.16",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "tailwindcss": "^4.1.8"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
+        "@tanstack/router-plugin": "^1.120.16",
         "@types/bun": "latest",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
