--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
         "@tailwindcss/vite": "^4.1.8",
         "@tanstack/react-router": "^1.120.16",
         "@tanstack/react-router-devtools": "^1.120.16",
+        "@types/mapbox-gl": "^3.4.1",
+        "clsx": "^2.1.1",
+        "mapbox-gl": "^3.12.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8"
     },
     "devDependencies": {
@@ -23,7 +27,7 @@
         "@types/bun": "latest",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
-        "@vitejs/plugin-react": "^4.4.1",
+        "@vitejs/plugin-react-swc": "^3.10.1",
         "globals": "^16.0.0",
         "typescript": "~5.8.3",
         "vite": "^6.3.5"
