--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@tanstack/react-router-devtools": "^1.120.16",
         "@types/mapbox-gl": "^3.4.1",
         "clsx": "^2.1.1",
+        "i18n-iso-countries": "^7.14.0",
         "mapbox-gl": "^3.12.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
