--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.8",
+        "@tanstack/react-form": "^1.12.2",
         "@tanstack/react-router": "^1.120.16",
         "@tanstack/react-router-devtools": "^1.120.16",
         "@types/mapbox-gl": "^3.4.1",
         "clsx": "^2.1.1",
         "i18n-iso-countries": "^7.14.0",
         "mapbox-gl": "^3.12.0",
+        "pocketbase": "^0.26.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwind-merge": "^3.3.0",
