build: Use envvar for PocketBase URL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Mapbox Access Token
 # https://www.mapbox.com/
 VITE_MAPBOX_ACCESS_TOKEN=
+
+# PocketBase instance URL
+VITE_POCKETBASE_URL=http://localhost:8090
