--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
             dockerfile: Dockerfile
             args:
                 VITE_MAPBOX_ACCESS_TOKEN: ${VITE_MAPBOX_ACCESS_TOKEN}
+                VITE_POCKETBASE_URL: ${VITE_POCKETBASE_URL}
         ports:
             - "8080:80"
         restart: unless-stopped
